<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>website</name>
  <version>0.0.0</version>
  <description>The NextJS website that uses rclnodejs to communicate with ROS. The website manages controlling the robot as well as showing data from the robot's sensors.</description>
  <maintainer email="spool.i@northeastern.edu">selene</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>lunabotics_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
